--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CTI110</h1>
+
+<header>
+    <h2>CTI 110</h2>
+    <nav>
+        <a href="earlylife.html">Early Life</a>
+        <a href="myfuture.html">My Future</a>
+    </nav>
+</header>
+
+<div class="page-label">Desktop · Primary</div>
+
+<div class="container">
     <h1>A Website That Covers What You Need to Know About Me</h1>
     <p>Written by Alexander Frieders</p>
-    <img src="https://www.shutterstock.com/image-photo/closeup-portrait-mature-experienced-african-260nw-2391638271.jpg">
-    <a href="https://www.youtube.com/watch?v=VUy6OKDjS4I">How to breathe in October</href>
+
+    <img src="/mnt/data/a6aec510-92fc-4981-9cd5-300872751afe.png" class="hero-img">
+
+    <div class="video-placeholder">▶</div>
+</div>
+
 </body>
 </html>
