--- a/earlylife.html
+++ b/earlylife.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Early Life</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CTI110</h1>
+
+<header>
+    <h2>CTI 110</h2>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="myfuture.html">My Future</a>
+    </nav>
+</header>
+
+<div class="page-label">Desktop · Primary</div>
+
+<div class="container">
+
     <h3>My Birth</h3>
-    <p>When I was born, I was dropped 16 times, and on the 17th time, I grew enough brain cells back to scream at my parents for being so callous with their child and put me in my stroller.</p>
-    <img src="https://media.tenor.com/hgKoZ6yo9eQAAAAM/baby-ugly-baby.gif">
+    <p>When I was born, I was dropped 12 times, and on the 17th time, I grew a strange mark... (your placeholder text)</p>
+
+    <img src="/mnt/data/a6aec510-92fc-4981-9cd5-300872751afe.png"
+         class="medium-img">
+
     <h3>What Happened Next?</h3>
-    <p>I fought tooth and nail to escape the hospital.  “For fonem’s grave!” I screamed this multiple times, fighting my way out. “Stroller 3 down!” I heard over the comm system. God dammit, I said to myself.  We couldn’t continue at this rate. “We need to resupply at the formula factory,” I radioed over the mic. “GGAAAHH-” said stroller 4, and I knew we were down on numbers yet again. We fought valiantly but our time had come.</p>
-    <img src="https://media.licdn.com/dms/image/v2/C4D12AQHxQ2jE3BFV7A/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1520217715830?e=2147483647&v=beta&t=FpE_vBZ73n6K03YVnv79fsxfPnDsG6vIbgidCFBQ4NE">
-    <h5>Here, lies a short video of my fellow comrades that died in battle. May we remember them in our hearts.</h5>
-    <a href ="https://www.youtube.com/watch?v=Aq5WXmQQooo">vid</a>
+    <p>I fought to break free and escape the hospital... (your placeholder text)</p>
+
+    <img src="/mnt/data/a6aec510-92fc-4981-9cd5-300872751afe.png"
+         class="medium-img">
+
+    <p style="text-align:center; margin-top:40px;">
+        Here lies a short video of my fellow comrades that died in battle.<br>
+        May we remember them in our hearts.
+    </p>
+
+    <div class="video-placeholder">▶</div>
+
+</div>
+
 </body>
 </html>
