--- a/earlylife.html
+++ b/earlylife.html
@@ -19,24 +19,25 @@
 <div class="container">
 
     <h3>My Birth</h3>
-    <p>When I was born, I was dropped 12 times, and on the 17th time, I grew a strange mark... (your placeholder text)</p>
+    <p>When I was born, I was dropped 16 times, and on the 17th time, I grew enough brain cells back to scream at my parents for being so callous with their child and put me in my stroller.</p>
 
-    <img src="/mnt/data/a6aec510-92fc-4981-9cd5-300872751afe.png"
-         class="medium-img">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgk6H2kMWHXjaJvh7ickJnoigyM9raBvcSlUnGq-RJTUxuqCAKWew1AmNPSd_48thtohmkkQHxHnA9dKqfJkCqZMz3n2JuxLLADtsZw0F2OMtKdQ1nO4cPjc3u12nh-dekjky3giQ/s640/ugly+baby.jpg"
+         class="medium-img" >
 
     <h3>What Happened Next?</h3>
-    <p>I fought to break free and escape the hospital... (your placeholder text)</p>
+    <p>I fought tooth and nail to escape the hospital.  “For fonem’s grave!” I screamed this multiple times, fighting my way out. “Stroller 3 down!” I heard over the comm system. God dammit, I said to myself.  We couldn’t continue at this rate. “We need to resupply at the formula factory,” I radioed over the mic. “GGAAAHH-” said stroller 4, and I knew we were down on numbers yet again. We fought valiantly but our time had come.</p>
 
-    <img src="/mnt/data/a6aec510-92fc-4981-9cd5-300872751afe.png"
-         class="medium-img">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqMuYasgctl3OdET6zKUrQ2mAkKpnM_lnhlA&s"
+         class="medium-img" >
 
     <p style="text-align:center; margin-top:40px;">
         Here lies a short video of my fellow comrades that died in battle.<br>
         May we remember them in our hearts.
     </p>
-
-    <div class="video-placeholder">▶</div>
-
+ <div class="video-placeholder">▶
+        <button><a href = https://www.youtube.com/watch?v=Aq5WXmQQooo">
+click</a></button>
+        </div>
 </div>
 
 </body>
