--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
     <h1>A Website That Covers What You Need to Know About Me</h1>
     <p>Written by Alexander Frieders</p>
 
-    <img src="/mnt/data/a6aec510-92fc-4981-9cd5-300872751afe.png" class="hero-img">
+    <img src="https://img.freepik.com/free-photo/man-s-white-sweater-psd-mockup-casual-apparel-close-up_53876-148045.jpg?semt=ais_hybrid&w=740&q=80" class="hero-img">
 
-    <div class="video-placeholder">▶</div>
+   <iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/VUy6OKDjS4I" 
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+</iframe>
+
 </div>
 
 </body>
