--- a/myfuture.html
+++ b/myfuture.html
@@ -19,25 +19,24 @@
 <div class="container">
 
     <div style="display:flex; gap:20px;">
-        <img src="/mnt/data/a6aec510-92fc-4981-9cd5-300872751afe.png" class="medium-img">
-        <div class="medium-img" style="background:#fda4af;"></div>
+<img src = "https://cdn2.psychologytoday.com/assets/styles/manual_crop_1_1_1200x1200/public/field_blog_entry_images/2024-03/money%20decision%20photo.jpg?itok=hDA3p5YI" width ="900px">        <div class="medium-img" style="background:#fda4af;"></div>
         <div class="medium-img" style="background:#fb923c;"></div>
     </div>
 
     <div style="display:flex; gap:20px; margin-top:20px;">
         <div style="width:30%;">
             <h4>Future Job</h4>
-            <p>I want a job that brings in the money. Maybe veterinarian…</p>
+            <p>Whatever brings in the bank. Wether it be a waste remover, babysitter, or a nuclear factory manager, I will  do whatever it takes so stop working as early as possible. Or I could just manage my parent’s vast financial fortune well and not have to work a day in my life, but that dream is too good to come true.</p>
         </div>
 
         <div style="width:30%;">
             <h4>Future Goals</h4>
-            <p>Make a bunch of money, buy a nice house and car...</p>
+            <p>Make a bunch of money, buy a nice suv, a small home, retire early, and consume the best food this world has to offer.</p>
         </div>
 
         <div style="width:30%;">
             <h4>How?</h4>
-            <p>I will make so much money that people might accidentally nickname me Elon.</p>
+            <p>I will make so much money that people will spontaneously combust an exorbitant amount of times, and this wil cause my stock in Spontaneous Combusting Inc. to skyrocket, with a bunch of money going to me.</p>
         </div>
     </div>
 
